# notifications

./: .drone.yml  Cargo.toml  Dockerfile  Jenkinsfile  build.rs
api_tests/: test_base_product_moderation_status_for_moderator.http  test_base_product_moderation_status_for_user.http  test_store_moderation_status_for_moderator.http  test_store_moderation_status_for_user.http
config/: base.toml  development.toml  k8s.toml
docker/: Dockerfile.build  Dockerfile.notif  Dockerfile.run  docker-compose.yml
migrations/2018-08-10-152627_create_templates/: up.sql
migrations/2018-08-13-071527_create_user_roles/: up.sql
migrations/2018-08-17-070930_initial_templates/: down.sql  up.sql
migrations/2018-08-27-120452_update_templates/: up.sql
migrations/2018-08-27-122029_update_templates/: down.sql  up.sql
migrations/2018-08-27-123919_update_templates/: down.sql  up.sql
migrations/2018-08-27-124816_update_templates/: down.sql  up.sql
migrations/2018-08-27-125112_update_templates/: down.sql  up.sql
migrations/2018-08-31-092133_update_templates/: up.sql
migrations/2018-09-03-063832_update_templates/: down.sql  up.sql
migrations/2018-09-03-064148_update_templates/: up.sql
migrations/2018-09-03-064320_update_templates/: up.sql
migrations/2018-09-03-064456_update_templates/: up.sql
migrations/2018-09-03-064629_update_templates/: down.sql  up.sql
migrations/2018-09-27-073236_update_roles/: down.sql  (+1 more)
seeds/: initial_data.sql
src/: config.rs  errors.rs  lib.rs  main.rs  schema.rs
templates/: store_order_create.hbr
tests/: integration_test_templates.rs
(+39 files in other folders)
